# Droplet-Microfluidics-Analysis-Suite

./: .gitignore  AGENTS.md  CMakeLists.txt  Technical_Specification_Sheet_V1.0.md
Docs/: TECHSPEC.md  TODO.md  TODO_updated.md  camera_asset_inventory_qt_hama_gui.md  dcam_connectivity_streaming_test_qt_hama_gui.md
Docs/AGENTS/: 00_spec_read_map.md  01_workflow.md  02_build_and_tests.md  03_task_execution_rules.md  04_troubleshooting.md
Docs/TECHSPEC_SPLIT/: 00_overview.md  01_scope_objectives.md  02_system_architecture.md  03_functional_requirements.md  04_performance_benchmarks.md  05_fluorescence.md  06_data_formats.md  07_gui_requirements.md  08_dependencies_licensing.md  09_performance_usb_bandwidth.md  10_testing_validation.md  11_development_roadmap.md  12_deliverables.md  13_open_questions.md  14_success_criteria.md  TECHSPEC_INDEX.md
Docs/patches/: qt_hama_gui_log_lostframe.patch
Prototypes/FrameCache/: FrameCacheTests.vcxproj
Prototypes/FrameCache/include/: FrameCache.h
Prototypes/FrameCache/tests/: FrameCacheTests.cpp
Spikes/Phase0/0.4_ImageSequenceLoadingValidationPerf/: ImageSequencePerf.psm1  Invoke-ImageSequencePerfTest.ps1  README.md  SelfTest.ps1
cli/: CMakeLists.txt  dcam_link_check.cpp  main.cpp
cmake/: FindDCAM.cmake  FindGTest.cmake  FindLibTIFF.cmake  FindNlohmannJson.cmake  FindOpenCV.cmake  FindQt6.cmake  FindSpdlog.cmake
include/: AnalysisResults.h  BackgroundSubtraction.h  DataModels.h  DropletDetection.h  FluorescenceQuantification.h  HashUtils.h  IAnalysisModule.h  InputSource.h  MathUtils.h  ProgressCallback.h  TimeUtils.h  libdroplet.h  logging.h
scripts/: run_tests.ps1
src/: BackgroundSubtraction.cpp  CMakeLists.txt  DropletDetection.cpp  FluorescenceQuantification.cpp  HashUtils.cpp  MathUtils.cpp  TimeUtils.cpp  dummy.cpp  libdroplet.cpp  logging.cpp
tests/: CMakeLists.txt  analysis_results_test.cpp  background_subtraction_tests.cpp  cmake_build_tests.ps1  data_models_test.cpp  droplet_detection_tests.cpp  dummy_test.cpp  fluorescence_quantification_tests.cpp  hash_utils_tests.cpp  input_source_signatures_test.cpp  logging_tests.cpp  math_utils_tests.cpp  progress_callback_tests.cpp  scaffold_layout_tests.ps1  smoke_test.cpp  smoke_tests.cpp  time_utils_tests.cpp
tests/cmake/: verify_with_dcam_sdk_option.cmake
